// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allow setting jobProperties / default configuration 1`] = `
Array [
  Object {
    "apiVersion": "batch/v1",
    "kind": "CronJob",
    "metadata": Object {
      "name": "test-cronjob-c812e113",
    },
    "spec": Object {
      "concurrencyPolicy": "Forbid",
      "failedJobsHistoryLimit": 1,
      "jobTemplate": Object {
        "spec": Object {
          "activeDeadlineSeconds": 60,
          "backoffLimit": 4,
          "template": Object {
            "metadata": Object {
              "labels": Object {
                "cdk8s.io/metadata.addr": "test-CronJob-c80e4ce0",
              },
            },
            "spec": Object {
              "automountServiceAccountToken": true,
              "containers": Array [
                Object {
                  "image": "image",
                  "imagePullPolicy": "Always",
                  "name": "main",
                  "securityContext": Object {
                    "privileged": false,
                    "readOnlyRootFilesystem": false,
                    "runAsNonRoot": false,
                  },
                },
              ],
              "dnsPolicy": "ClusterFirst",
              "restartPolicy": "Never",
              "securityContext": Object {
                "fsGroupChangePolicy": "Always",
                "runAsNonRoot": false,
              },
              "setHostnameAsFQDN": false,
            },
          },
        },
      },
      "schedule": "* * * * *",
      "startingDeadlineSeconds": 10,
      "successfulJobsHistoryLimit": 3,
      "suspend": false,
    },
  },
]
`;

exports[`allows setting all options 1`] = `
Array [
  Object {
    "apiVersion": "batch/v1",
    "kind": "CronJob",
    "metadata": Object {
      "name": "test-cronjob-c812e113",
    },
    "spec": Object {
      "concurrencyPolicy": "Allow",
      "failedJobsHistoryLimit": 3,
      "jobTemplate": Object {
        "metadata": Object {
          "name": "CustomJob",
        },
        "spec": Object {
          "activeDeadlineSeconds": 60,
          "backoffLimit": 4,
          "template": Object {
            "metadata": Object {
              "labels": Object {
                "cdk8s.io/metadata.addr": "test-CronJob-c80e4ce0",
              },
            },
            "spec": Object {
              "automountServiceAccountToken": true,
              "containers": Array [
                Object {
                  "image": "image",
                  "imagePullPolicy": "Always",
                  "name": "main",
                  "securityContext": Object {
                    "privileged": false,
                    "readOnlyRootFilesystem": false,
                    "runAsNonRoot": false,
                  },
                },
              ],
              "dnsPolicy": "ClusterFirst",
              "restartPolicy": "Never",
              "securityContext": Object {
                "fsGroupChangePolicy": "Always",
                "runAsNonRoot": false,
              },
              "setHostnameAsFQDN": false,
            },
          },
        },
      },
      "schedule": "5 * * * *",
      "startingDeadlineSeconds": 60,
      "successfulJobsHistoryLimit": 3,
      "suspend": false,
      "timeZone": "America/Los_Angeles",
    },
  },
]
`;
